--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,46 @@
+input[type="radio"],
+input[type="checkbox"] {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 10px; /* Optional: Adds some space between the elements */
+    text-align: center; /* Center aligns the elements */
+}
+
+/* Add the following CSS code */
+input[type="radio"] {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+input[type="checkbox"] {
+    margin-left: auto;
+    margin-right: auto;
+}
+
 body {
     background-color: #000;
     color: #fff;
     font-family: 'Helvetica', 'Arial', sans-serif;
-    text-align: center;
     margin: 0;
+    text-align: center; /* Center aligns the content */
 }
 
 h1 {
     color: #00f;
+    text-align: center; /* Center aligns the h1 title */
 }
 
 #options {
     margin: 20px 0;
+    text-align: left; /* Aligns the options to the left */
 }
 
 label {
     display: block;
     margin: 10px 0;
     color: #fff;
+    text-align: left; /* Aligns the lines to the left */
 }
 
 button {
