--- a/styles.css
+++ b/styles.css
@@ -19,11 +19,9 @@ input[type="checkbox"] {
 }
 
 body {
-    background-color: #000;
+    background-color: #121212;
     color: #fff;
-    font-family: 'Helvetica', 'Arial', sans-serif;
-    margin: 0;
-    text-align: center; /* Center aligns the content */
+    font-family: 'Roboto', sans-serif;
 }
 
 h1 {
@@ -44,29 +42,43 @@ label {
 }
 
 button {
-    background-color: #00f;
+    background-color: #1a73e8;
     color: #fff;
     padding: 10px 20px;
     font-size: 16px;
     border: none;
     cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+button:hover {
+    background-color: #0052cc;
 }
 
 #quiz {
     margin-top: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
+
 #question-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #000;
-    background-color: #fff;
+    color: #fff;
+    background-color: #1f1f1f;
     margin-top: 20px;
     padding: 20px;
     text-align: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-#answer-input {
+#answer-container {
     margin-top: 20px;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
 }
