--- a/styles.css
+++ b/styles.css
@@ -65,8 +65,8 @@ button:hover {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    color: #fff;
-    background-color: #1f1f1f;
+    color: #000000;
+    background-color: #ffff00;
     margin-top: 20px;
     padding: 20px;
     text-align: center;
