--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@
 }
 
 input[type="radio"],
+input[type="number"],
 input[type="checkbox"] {
     display: flex;
     align-items: center;
@@ -16,13 +17,9 @@ input[type="checkbox"] {
     text-align: center; /* Center aligns the elements */
 }
 
-/* Add the following CSS code */
-input[type="radio"] {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-input[type="checkbox"] {
+input[type="radio"],
+input[type="checkbox"],
+input[type="number"] {
     margin-left: auto;
     margin-right: auto;
 }
